fix: reject the embedded selector when the Vector API is absent
Review of PR #70 found that the embedded pair became legal before any
runtime carries the flag it needs. A deployment could set it and fail at
the first recall.

VectorSelectorValidation now checks for jdk.incubator.vector when the
vector selector is embedded. A JVM without the module fails at startup
with a message that names the flag to add.

The check runs after the legal pair check. An illegal pair stays a
configuration error, whatever this JVM can load.

The design spec now lists embedded in the vector values and in the legal
pair matrix. It also records the extra Vector API condition and states
that VectorSelectorValidation holds the authoritative set.

Both directions are proven. chat-core has no flag, so it rejects embedded
at startup. chat-deploy-memory has the flag, so it boots and recalls.

Issues: CHAT-zmrthqio, CHAT-sbpqlmki

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014JpbDMU3hCfR633tYpAopH