@@ -19,6 +19,22 @@ object VectorSelectorValidation {
         "embedded" to "mock",
     )
 
+    const val EMBEDDED = "embedded"
+
+    /**
+     * The Vector API is an incubator module. A JVM without
+     * --add-modules jdk.incubator.vector cannot load it. The embedded
+     * vector store then throws NoClassDefFoundError at the first recall,
+     * far from the cause. This check moves that failure to startup.
+     */
+    private fun vectorApiPresent(): Boolean =
+        try {
+            Class.forName("jdk.incubator.vector.FloatVector")
+            true
+        } catch (absent: ClassNotFoundException) {
+            false
+        }
+
     // Derived from legalPairs so the message cannot drift from the set.
     private val legalPairsDescription =
         legalPairs.joinToString(", ") { (vector, embedding) ->
@@ -42,6 +58,17 @@ object VectorSelectorValidation {
                 "Illegal recall selector pair: app.service.core.vector=$vector, " +
                     "app.service.core.embedding=$embedding. Legal pairs: " +
                     "$legalPairsDescription."
+            )
+        }
+
+        // Checked last. An illegal pair is a configuration error and must be
+        // reported as one, whatever this JVM can load.
+        if (vector == EMBEDDED && !vectorApiPresent()) {
+            throw IllegalStateException(
+                "Recall selector app.service.core.vector=embedded needs the Vector API. " +
+                    "The module jdk.incubator.vector is absent from this JVM. " +
+                    "Add --add-modules jdk.incubator.vector to the launch command. " +
+                    "Without it the vector store fails at the first recall, not at startup."
             )
         }
     }
